--- a/certs/ca.cnf
+++ b/certs/ca.cnf
@@ -14,7 +14,7 @@ private_key		= $dir/ca.key
 RANDFILE		= $dir/.rand
 name_opt		= ca_default
 cert_opt		= ca_default
-default_days		= 60
+default_days		= 9000
 default_crl_days	= 30
 default_md		= sha256
 preserve		= no
@@ -41,22 +41,22 @@ emailAddress		= optional
 [ req ]
 prompt			= no
 distinguished_name	= certificate_authority
-default_bits		= 2048
+default_bits		= 8192
 input_password		= whatever
 output_password		= whatever
 x509_extensions		= v3_ca
 
 [certificate_authority]
-countryName		= FR
-stateOrProvinceName	= Radius
-localityName		= Somewhere
-organizationName	= Example Inc.
-emailAddress		= admin@example.org
-commonName		= "Example Certificate Authority"
+countryName		= IN
+stateOrProvinceName	= Maharashtra
+localityName		= Mumbai
+organizationName	= AAK MARKETSPHERE TRADERS LLP
+emailAddress		= aakmarketspheretradersllp@gmail.com
+commonName		= "AAK Radius Certificate Authority"
 
 [v3_ca]
 subjectKeyIdentifier	= hash
 authorityKeyIdentifier	= keyid:always,issuer:always
 basicConstraints	= critical,CA:true
-crlDistributionPoints	= URI:http://www.example.org/example_ca.crl
+crlDistributionPoints	= URI:https://aakmarketspheretraders.com/ca.crl
 
