--- a/certs/client.cnf
+++ b/certs/client.cnf
@@ -14,9 +14,9 @@ private_key		= $dir/ca.key
 RANDFILE		= $dir/.rand
 name_opt		= ca_default
 cert_opt		= ca_default
-default_days		= 60
-default_crl_days	= 30
-default_md		= sha256
+default_days		= 1
+default_crl_days	= 1
+default_md		= sha384
 preserve		= no
 policy			= policy_match
 
@@ -40,14 +40,14 @@ emailAddress		= optional
 [ req ]
 prompt			= no
 distinguished_name	= client
-default_bits		= 2048
+default_bits		= 8192
 input_password		= whatever
 output_password		= whatever
 
 [client]
-countryName		= FR
-stateOrProvinceName	= Radius
-localityName		= Somewhere
-organizationName	= Example Inc.
-emailAddress		= user@example.org
-commonName		= user@example.org
+countryName		= IN
+stateOrProvinceName	= Maharashtra
+localityName		= Mumbai
+organizationName	= AAK MARKETSPHERE TRADERS LLP
+emailAddress		= www.aryan804@gmail.com
+commonName		= "pixel 5 temp key 1 day"	
