--- a/radiusd.conf
+++ b/radiusd.conf
@@ -699,7 +699,7 @@ security {
 	#    this flag to "no", in which case the network will work,
 	#    but will be vulnerable to the attack.
 	#
-	require_message_authenticator = auto
+	require_message_authenticator = yes
 
 	#
 	#  Global configuration for limiting the combination of
@@ -786,7 +786,7 @@ security {
 	#    this flag to "no", in which case the network will work,
 	#    but will be vulnerable to the attack.
 	#
-	limit_proxy_state = auto
+	limit_proxy_state = yes
 
 	#
 	#  allow_vulnerable_openssl: Allow the server to start with
