--- a/clients.conf
+++ b/clients.conf
@@ -2,7 +2,7 @@
 ##
 ## clients.conf -- client configuration directives
 ##
-##	$Id: 5f39ff120a44e3fb837d1893d54a7ebb31fd8749 $
+##	$Id: b1dfe966986b24ad7b6c05189a810751bf835fbb $
 
 #######################################################################
 #
@@ -273,12 +273,44 @@ client localhost {
 		#  If no packets have been received over the connection for
 		#  this time, the connection will be closed.
 		#
+		#  In general, the client should close connections
+		#  when they are idle.  This setting is here just to
+		#  make sure that bad clients do not leave connections open for days.
+		#
+		#  If an idle timeout is set for only a "client" or a
+		#  "listen" section, that timeout is used.
+		#
+		#  If an idle timeout is set for both a "client" and a
+		#  "listen" section, then the smaller timeout is used.
+		#
 		#  Setting this to 0 means "no timeout".
 		#
 		#  We STRONGLY RECOMMEND that you set an idle timeout.
 		#
-		idle_timeout = 30
+		#  Systems with many incoming connections (500+) should
+		#  set this value to a lower number.  There are only a
+		#  limited number of usable file descriptors (usually
+		#  1024) due to Posix API issues.  If many sockets are
+		#  idle, it can prevent the server from opening new
+		#  connections.
+		#
+		idle_timeout = 900
 	}
+
+	#
+	#  TLS Configuration
+	#
+	#  A client can have TLS settings. The settings here are the
+	#  settings used by the server when a client connects to it.
+	#
+	#  The TLS configuration for RADIUS/TLS clients is the same as
+	#  the listener TLS configuration.  See sites-available/tls,
+	#  and "listen { ... tls { ... } }" for examples of the server
+	#  TLS configuration.
+	#
+#	tls {
+#		...
+#	}
 }
 
 # IPv6 Client
